- Added W3C log appender for logback modeled after FMS log events and categories
- Added the ability to unload a context using the ContextLoader
- Added RTMPS support (Jira SN-69)
- Set default J2EE servlet container / HTTP server to Tomcat

Bugfixes:
- RTMPProtocolDecoder fixed to support RSO sendMessage (Jira CODECS-9)
- Fixed Tomcat logging problem
- Fixed memory leak in ServiceUtils


Red5 0.7.0  (2008-02-23)
------------------------
New Features:
- Initial Edge/Origin clustering support for multiple Edges with a single
  Origin (Jira APPSERVER-66)	
- Added stream listeners that can get notified about received packets
- Support for server-side Javascript (Jira APPSERVER-169)
- Added new base class org.red5.server.adapter.MultiThreadedApplicationAdapter
  that allows multiple clients to connect simultaneously to the same
  application
- Added new Flash Player 9 statuses NetStream.Play.FileStructureInvalid and 
  NetStream.Play.NoSupportedTrackFound
- New Flex admin tool (Jira APPSERVER-242)

Bugfixes:
- Pause near end of buffered streams works as expected (Jira APPSERVER-199)
- Fixed potential memory leak with RTMPT connections that are not properly
  closed (Jira APPSERVER-193)
- "onMetaData" is only written to newly recorded FLV files and contains
  valid properties now
- Don't try to decode objects for closed RTMPT connections
  (Jira APPSERVER-208)
- New multi-threaded connection code fixes various timeout issues
  (Jira APPSERVER-122, Jira APPSERVER-166 and Jira APPSERVER-167)
- Always use correct classloader inside applications (Jira APPSERVER-200)
- Tomcat cannot undeploy red5 application (Jira APPSERVER-204)
- "ByteArray" objects used old data after calling "compress" or "uncompress"
  (Jira APPSERVER-211)
- "@DontSerialize" checks for properties also in inherited classes
  (Jira APPSERVER-225)
- Enabled bidirectional class serialization (Jira APPSERVER-219)
- Array typed parameters in remoting service methods converted properly
  (Jira APPSERVER-161)
